[fix] - spacing on homePage

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,7 +22,7 @@ main {
 }
 
 .body-container {
-    margin-top: 28vh;
+    margin-top: 25vh;
     margin-left: 25%;
     width: 100%;
 }
