--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -15,7 +15,9 @@
     animation: rotation2 4s linear infinite;
 }
 
-
+.skill-container p {
+    font-size: 13px;
+}
 @keyframes rotation1 {
     from {
         transform: rotate(0deg);
